# cmake_tutorial

./: CMakeLists.txt  README.md  main.c  name.c  name.h
